# sbir-transition-classifier

./: .dockerignore  .gitignore  AGENTS.md  ANALYSIS_RESULTS.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CSV_OPTIMIZATION.md  DATA_README.md  DOCUMENTATION_INDEX.md  DUAL_PERSPECTIVE_FINDINGS.md  Dockerfile  ENHANCED_FEEDBACK.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  LICENSE  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE5_6_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_STATUS.md  SBIR_DATA_ANALYSIS_FINAL.md  SBIR_DATA_LOSS_ANALYSIS.md  SYSTEM_ARCHITECTURE.md  add_indexes.py  benchmark_csv_loading.py  docker-compose.yml  fix_data_ingestion.py  pyproject.toml  setup.py  test_enhanced_feedback.py  test_integration.py
.github/workflows/: ci.yml
config/: classification.yaml  default.yaml
config/examples/: broad-discovery.yaml  high-precision.yaml
data/: README.md
data_subset/: README.md
docs/: DOCUMENTATION_INDEX.md  E2E_TEST_ASSESSMENT.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_ROADMAP.md  NEXT_STEPS.md  PHASE1_COMPLETION.md  PHASE2_COMMIT_MESSAGE.md  PHASE2_COMPLETION.md  PHASE_0_SUMMARY.md  PHASE_1_COMPLETE.md  PROGRESS_SUMMARY.md  README.md  REFACTORING_GUIDE.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_PLAN.md  REFACTORING_QUICK_REF.md  REFACTORING_SUMMARY.md  ROADMAP.md  SPECIFICATIONS.md  TESTING_STRATEGY.md
docs/archive/specs/001-prompt-detect-untagged/: plan.md  research.md  spec.md
docs/archive/specs/001-prompt-detect-untagged/checklists/: requirements.md
docs/archive/specs/002-this-will-be/: plan.md  quickstart.md  research.md
docs/archive/specs/002-this-will-be/checklists/: requirements.md
output/: detections_integration_test.jsonl  detections_summary_integration_test.csv
reports/: dual_perspective_report_20251016_113859.json
scripts/: add_performance_indexes.py  enhanced_analysis.py  export_data.py  load_bulk_data.py  load_bulk_data_fast.py  sbir-detect  setup_local_db.py  simple_load_data.py  test_optimizations.py  train_model.py  validate_config.py
specs/001-prompt-detect-untagged/: data-model.md  quickstart.md  spec.md  tasks.md
specs/001-prompt-detect-untagged/contracts/: api.yaml
specs/002-this-will-be/: data-model.md  spec.md  tasks.md
specs/002-this-will-be/contracts/: cli.yaml  config-schema.yaml
specs/003-modify-our-code/: spec.md
specs/003-modify-our-code/checklists/: requirements.md
src/sbir_transition_classifier/analysis/: __init__.py  statistics.py  transition_perspectives.py
src/sbir_transition_classifier/api/: main.py
src/sbir_transition_classifier/cli/: __init__.py  bulk.py  data.py  dual_report.py  evidence.py  export.py  hygiene.py  main.py  output.py  reports.py  reset.py  run.py  summary.py  utils.py  validate.py
src/sbir_transition_classifier/config/: __init__.py  defaults.py  loader.py  reset.py  schema.py  validator.py
src/sbir_transition_classifier/core/: config.py  models.py  vendor_matching.py
src/sbir_transition_classifier/data/: evidence.py  hygiene.py  local_loader.py  models.py  schemas.py
src/sbir_transition_classifier/db/: config.py  database.py  queries.py
src/sbir_transition_classifier/detection/: data_quality.py  heuristics.py  local_service.py  main.py  pipeline.py  scoring.py
src/sbir_transition_classifier/ingestion/: __init__.py  base.py  contracts.py  factory.py  sbir.py
src/sbir_transition_classifier/scripts/: enhanced_analysis.py  export_data.py  load_bulk_data.py  setup_local_db.py  validate_config.py
src/sbir_transition_classifier/utils/: __init__.py  dates.py
test_data/: README.md
tests/: conftest.py
tests/fixtures/: datasets.py  test_detections.jsonl  test_detections_summary.csv
tests/integration/: test_api_endpoints.py  test_cli_bulk_process.py  test_cli_export.py  test_cli_run.py  test_cli_summary.py  test_data_flow.py  test_data_quality.py  test_detection_scenarios.py  test_end_to_end.py  test_run_full_detection_in_process.py
tests/unit/: test_api_simple.py  test_basic.py  test_comprehensive.py  test_config_and_detection.py  test_schemas_only.py
tests/unit/config/: test_loader.py
tests/unit/core/: test_vendor_matching.py
tests/unit/detection/: test_scoring.py
tests/unit/ingestion/: test_sbir_ingester.py
tests/unit/utils/: test_dates.py
