[tool.poetry]
name = "sbir-transition-classifier"
version = "0.1.0"
description = "A tool to detect untagged SBIR Phase III transitions."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
pandas = "^2.1.3"
loguru = "^0.7.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.2.1"
pyyaml = "^6.0.1"
click = "^8.1.7"
rich = "^13.7.0"
tqdm = "^4.66.0"

# Optional, heavy ML / processing dependencies are provided as an "extras" group
# so core installs remain lightweight for typical usage.
[tool.poetry.extras]
ml = ["xgboost", "scikit-learn", "dask"]

[tool.poetry.scripts]
sbir-detect = "sbir_transition_classifier.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
